--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
-q:
+w?
+.#*
+*#
+*~
+.classpath
+.project
+.settings
+bin
+build
+target
+dependency-reduced-pom.xml
+*.sublime-*
+/scratch
+.gradle
+README.html
+.idea
+gradle
+gradlew
+gradlew.bat
+*.iml
+*.ipr
+*.iws
+.DS_Store
+**/logs
+/files
+*.rdb
+node_modules/
+/dist
+.tmp
+.sass-cache
+bower_components
